# commit-signer

./: Cargo.toml  README.md  entitlements.xml
src/: github.rs  key.rs  main.rs
