[package]
name = "cs"
version = "0.1.0"
edition = "2021"
description = "Simple code signing setup"

[dependencies]
base64 = "0.21.0"
byteorder = "1.4.3"
clap = { version = "4.1.6", features = ["derive"] }
core-foundation = "0.9.3"
env_logger = "0.10.0"
eyre = "0.6.8"
inquire = "0.5.3"
log = "0.4.17"
picky-asn1 = "0.7.0"
picky-asn1-der = "0.4.0"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
security-framework = {path="../rust-security-framework/security-framework", features=["OSX_10_15"]}
serde = "1.0.152"
serde_bytes = "0.11.9"
serde_json = "1.0.93"
ssh-agent-lib = {version="0.2.5", features=["agent"]}

